    * Nicer messages for Wlan errors; LCDPrinter now accesses the model for IP
    * Statics generated from submodule
    * Support pausing, resuming and stopping of serial prints from the LCD
    * Implementation of metadata into /api/files endpoint
    * Process all commands in a single thread -> racing avoided
    * Uploading from local web
    * Prusa Link version in INFO event
    * G-code preview and download endpoints
    * Thread names via prctl - can be show in htop
    * Shutdown fix
    * Report build number alongside firmware version
    * Added api commands for pause, stop and resume print job
    * If-Modified-Since and If-None-Match headers support for /api/files
    * Additional version info
    * Files in hidden folder are ignored
    * Report file names of SD prints better
    * Added endpoint for start print
    * LCD message modification (GO: <IP>)
    * Fix connection errors causing the printer to report being in ERROR state
    * Add the possibility to log at debug level around interesting events
    * Distinguish wifi from lan
    * Implementation of select/print file functions from local web
    * File resource endpoint
    * working `start / stop / pause / resume` job
    * job info refactoring
    * endpoint for deleting file
    * fix job get / set

0.2.0 (2020-12-14)

    * JOB_INFO fix
    * Service must be start using daemon script prusa-link
    * Implicit config path is /etc/Prusa-Link/prusa-link.ini
    * Implicit settings path is {HOME}/prusa_printer_settings.ini
    * Wizard - part II
    * Api-Key in INFO event
    * Wizard redesign


0.1.3 (2020-12-01)

    * Report at least a file name for SD prints
    * Wizard - part I
    * Fix command handling and re-undo fw double-ok workarounds
      (FW commit gd167b3bd or newer is required)

0.1.2 (2020-11-23)

    * New FW (3.9.2.3566) required
    * local web service on http://IP-address:8080
    * file upload from Prusa Slicer (use `PrusaSlicer` Api-Key)