@@ -70,6 +70,7 @@
     * job info refactoring
     * endpoint for deleting file
     * fix job get / set
+    * Implementation of gcode download endpoint
 
 0.2.0 (2020-12-14)
 
